frontend/error.txt
D:\tesis\jhire\frontend\app.js:1071
});
 ^

SyntaxError: Unexpected token ')'
    at wrapSafe (node:internal/modules/cjs/loader:1472:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v20.19.4
